# data-analysis-stability-evaluator

./: .dockerignore  .gitignore  Dockerfile  README.md  SECURITY.md  _config.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  lint.yml  publish.yml  pytest.yml
docs/: release.md  usage.md
examples/: generic_tabular_analysis.py
service/: Dockerfile  README.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements-release.in  requirements-release.txt  requirements.in  requirements.txt
service/examples/: generic_tabular_analysis.py
service/src/data_analysis_stability_evaluator/: __init__.py  cli.py  compare.py  demo.py  evaluator.py  flatten.py  metrics.py  profile.py
service/tests/: test_evaluator.py  test_metrics.py
src/analysis_stability/: __init__.py  cli.py  compare.py  demo.py  evaluator.py  flatten.py  metrics.py  model.py  perturb.py  profile.py  report.py
tests/: test_cli.py  test_evaluator.py  test_metrics.py  test_profile.py
