[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "analysis-stability-evaluator"
version = "0.1.0"
description = "Reusable stability evaluation toolkit for tabular data analysis projects under small data changes."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Masaaki Ikeda"}
]
keywords = ["data-analysis", "stability", "robustness", "data-quality", "pandas", "perturbation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "build>=1.0",
]
plots = [
  "matplotlib>=3.7",
]
sklearn = [
  "scikit-learn>=1.3",
]

[project.urls]
Homepage = "https://github.com/example/analysis-stability-evaluator"
Issues = "https://github.com/example/analysis-stability-evaluator/issues"

[project.scripts]
analysis-stability = "analysis_stability.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
