[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-analysis-stability-evaluator"
version = "0.0.1"
description = "Reusable stability evaluation toolkit for tabular data analysis projects under small data changes."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "europanite" }]
keywords = ["data-analysis", "stability", "robustness", "data-quality", "pandas", "perturbation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "build>=1.0",
  "ruff>=0.8",
  "twine>=5.0",
]

[project.urls]
Homepage = "https://github.com/europanite/data-analysis-stability-evaluator"
Issues = "https://github.com/europanite/data-analysis-stability-evaluator/issues"
Source = "https://github.com/europanite/data-analysis-stability-evaluator"

[project.scripts]
analysis-stability = "data_analysis_stability_evaluator.cli:main"
data-analysis-stability-evaluator = "data_analysis_stability_evaluator.cli:main"

[tool.setuptools.packages.find]
where = ["service/src"]

[tool.pytest.ini_options]
testpaths = ["service/tests"]
addopts = "-q"

[tool.ruff]
line-length = 120
src = ["service/src", "service/tests", "service/examples"]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []
